--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                                 class="author_avatar">
                             </div>
                             <div class="author_info_container">
-                                <span>
+                                <span id="name">
                                     John Doe
                                 </span>
-                                <span>
+                                <span id="date">
                                     Sept 19,2021
                                 </span>
                             </div>                            
@@ -120,10 +120,10 @@
                                 class="author_avatar">
                             </div>
                             <div class="author_info_container">
-                                <span>
+                                <span id="name">
                                     John Doe
                                 </span>
-                                <span>
+                                <span id="date">
                                     Sept 19,2021
                                 </span>
                             </div>                            
@@ -159,10 +159,10 @@
                                 class="author_avatar">
                             </div>
                             <div class="author_info_container">
-                                <span>
+                                <span id="name">
                                     John Doe
                                 </span>
-                                <span>
+                                <span id="date">
                                     Sept 19,2021
                                 </span>
                             </div>                            
@@ -198,10 +198,10 @@
                                 class="author_avatar">
                             </div>
                             <div class="author_info_container">
-                                <span>
+                                <span id="name">
                                     John Doe
                                 </span>
-                                <span>
+                                <span id="date">
                                     Sept 19,2021
                                 </span>
                             </div>                            
@@ -237,10 +237,10 @@
                                 class="author_avatar">
                             </div>
                             <div class="author_info_container">
-                                <span>
+                                <span id="name">
                                     John Doe
                                 </span>
-                                <span>
+                                <span id="date">
                                     Sept 19,2021
                                 </span>
                             </div>                            
@@ -276,10 +276,10 @@
                                 class="author_avatar">
                             </div>
                             <div class="author_info_container">
-                                <span>
+                                <span id="name">
                                     John Doe
                                 </span>
-                                <span>
+                                <span id="date">
                                     Sept 19,2021
                                 </span>
                             </div>                            
@@ -315,10 +315,10 @@
                                 class="author_avatar">
                             </div>
                             <div class="author_info_container">
-                                <span>
+                                <span id="name">
                                     John Doe
                                 </span>
-                                <span>
+                                <span id="date">
                                     Sept 19,2021
                                 </span>
                             </div>                            
